--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "compression": "~1.7.1",
     "express": "~4.16.2",
     "he": "~1.1.1",
-    "valid-url": "~1.0.9"
+    "valid-url": "~1.0.9",
+    "prerender-memory-cache": "~1.0.2"
   },
   "devDependencies": {
     "mocha": "^3.4.1",
